<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/theme_blue_primary_varient"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_sort_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextStyle_Medium"
        android:layout_marginTop="24dp"
        android:text="@string/sort_by"
        android:layout_marginStart="24dp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sort_alert_oldest"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="16sp"
        android:paddingHorizontal="24dp"
        android:text="@string/date_added_oldest"
        android:textAppearance="@style/TextStyle_Medium"
        android:textColor="@color/white"
        android:gravity="start|center_vertical"
        android:textAllCaps="false"
        android:backgroundTint="@color/theme_blue_primary_varient"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_marginTop="12dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/theme_secondary_grey"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sort_alert_newest"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAppearance="@style/TextStyle_Medium"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:paddingHorizontal="24dp"
        android:text="@string/date_added_newest"
        android:backgroundTint="@color/theme_blue_primary_varient"
        android:textColor="@color/white"
        android:gravity="start|center_vertical"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>
</LinearLayout>