<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/theme_blue_primary"
    tools:context=".ui.fragments.ImageDetailFragment">


    <include
        android:id="@+id/toolbar_detail_swipe"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnBack"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="14dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_detail_swipe"
        app:layout_constraintStart_toStartOf="@+id/toolbar_detail_swipe"
        app:layout_constraintTop_toTopOf="@+id/toolbar_detail_swipe"
        app:srcCompat="@drawable/ic_back"
        app:tint="@color/white" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6_swipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.84" />

    <ImageButton
        android:id="@+id/imgBtn_detail_delete_swipe"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerInside"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar_detail_swipe"
        app:layout_constraintEnd_toEndOf="@+id/toolbar_detail_swipe"
        app:layout_constraintTop_toTopOf="@+id/toolbar_detail_swipe"
        app:srcCompat="@drawable/ic_delete"
        app:tint="@color/white" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager_img_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline8_swipe"
        app:layout_constraintEnd_toStartOf="@+id/guideline6_swipe"
        app:layout_constraintStart_toStartOf="@+id/guideline3_swipe"
        app:layout_constraintTop_toTopOf="@+id/guideline7_swipe" />
    <LinearLayout
        android:id="@+id/linearLayout_swipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8_swipe">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_hide_detail_shot"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/pink_circle_bg">

                <ImageView
                    android:id="@+id/btn_detail_hide"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_hidden_eye"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                style="@style/TextStyle_Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/hide_tag"
                android:textAppearance="@style/TextStyle_Medium"
                android:textSize="10sp"
                app:textAllCaps="true" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btnAddTag"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_tag_with_circle"
                android:visibility="visible"
                app:tint="@color/theme_accent_pink" />

            <TextView
                style="@style/TextStyle_Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/add_tag"
                android:textAppearance="@style/TextStyle_Medium"
                android:textSize="10sp"
                app:textAllCaps="true" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/btnShare"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_share_with_circle"
                android:visibility="visible"
                app:tint="@color/theme_accent_pink" />

            <TextView
                style="@style/TextStyle_Normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/share"
                android:textAppearance="@style/TextStyle_Medium"
                android:textSize="10sp"
                app:textAllCaps="true" />


        </LinearLayout>

    </LinearLayout>

    <!--
    <com.google.android.gms.ads.AdView
        android:id="@+id/imageDetail_bannerAd_swipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

        -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3_swipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7_swipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8_swipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />


</androidx.constraintlayout.widget.ConstraintLayout>